--- a/GoogleCodeJam.cabal
+++ b/GoogleCodeJam.cabal
@@ -19,12 +19,12 @@ executable GoogleCodeJam
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, containers
+  build-depends:       base >=4.6 && <4.7, containers, bv
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
 test-suite TestGCJ
   main-is:             TestGCJ.hs
-  build-depends:       base, HTF >=0.11, containers
+  build-depends:       base, HTF >=0.11, containers, bv
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
