--- a/GoogleCodeJam.cabal
+++ b/GoogleCodeJam.cabal
@@ -19,7 +19,13 @@ executable GoogleCodeJam
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7, containers, bv, MissingH >=0.18, parallel
+  build-depends:       HTF >= 0.12.2.4
+                     , MissingH >=0.18
+                     , base >=4.6
+                     , bv
+                     , containers
+                     , parallel
+                     , classy-prelude
   -- hs-source-dirs:
   default-language:    Haskell2010
   ghc-options:
@@ -29,6 +35,11 @@ executable GoogleCodeJam
 
 test-suite TestGCJ
   main-is:             TestGCJ.hs
-  build-depends:       base, HTF >=0.11, containers, bv, MissingH >=0.18, parallel
+  build-depends:       HTF >= 0.12.2.4
+                     , MissingH >=0.18
+                     , base
+                     , bv
+                     , containers
+                     , parallel
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
